k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
  labels:
    app: orders
    version: v1
spec:
  replicas: 3 
  # 测试
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
        version: v1
    spec:
      containers:
        - name: orders
          image: cluster-registry:5000/orders:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
