k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  labels:
    app: orders
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
